--- a/beginners-programming/guides/lesson4.html
+++ b/beginners-programming/guides/lesson4.html
@@ -31,7 +31,7 @@
 
 <p>In general, to do useful things with programming languages, you need to grab an item you want to do something to, and then use code to do something to it.</p>
 
-<p>In JavaScript, we do this by grabbing a reference to the object we want to have an effect on. We've already done this — we've stored some items in variables. You can store anything in a variable, whether it is a simple string or number value, or something more complicated, like a video, paragraph or other element on a web page.</p>
+<p id="30">In JavaScript, we do this by grabbing a reference to the object we want to have an effect on. We've already done this — we've stored some items in variables. You can store anything in a variable, whether it is a simple string or number value, or something more complicated, like a video, paragraph or other element on a web page. This is done via the document object model.</p>
 
 <h2>Making a start</h2>
 
@@ -39,7 +39,7 @@
 
 <pre><code class="language-javascript">&lt;h1 class="myHeading"&gt;My heading&lt;/h1&gt;</code></pre>
 
-<p>We can grab a reference to this element using the following line — put this in your JavaScript area:</p>
+<p id="33">We can grab a reference to this element using the following line — put this in your JavaScript area:</p>
 
 <pre><code class="language-javascript">var myH1 = document.querySelector('.myHeading');
 // Store a reference to the h1 element inside a variable called myH1</code></pre>
@@ -148,6 +148,5 @@ for(i = 1; i <= 10 ; i++) {
   </main>
 
   </body>
-
   <script src="prism/prism.js"></script>
 </html>
