--- a/beginners-programming/guides/lesson7.html
+++ b/beginners-programming/guides/lesson7.html
@@ -29,7 +29,7 @@
   <p>Next:<br><a href="lesson8.html">More challenges</a></p>
 </nav>
 
-<p>Our game from earlier has still got a problem. We are still using a <code>prompt()</code> function to bring up a dialog box to ask players for guesses. This is still really bad for user experience. One of the core rules of user experience is to keep the number of pop ups down to a minimum. You all know how annoying popups can be. We should be able to do our entire app inside the web page, collecting data from the user with form elements. Our code currently looks like this:</p>
+<p id="50">Our game from earlier has still got a problem. We are still using a <code>prompt()</code> function to bring up a dialog box to ask players for guesses. This is still really bad for user experience. One of the core rules of user experience is to keep the number of pop ups down to a minimum. You all know how annoying popups can be. We should be able to do our entire app inside the web page, collecting data from the user with form elements. Our code currently looks like this:</p>
 
 <p>The HTML:</p>
 
@@ -229,6 +229,5 @@ guessField.value = "";
    
   </main>
   </body>
-
   <script src="prism/prism.js"></script>
 </html>
