--- a/beginners-programming/guides/lesson8.html
+++ b/beginners-programming/guides/lesson8.html
@@ -32,7 +32,7 @@
 
 <p>In this part of the series we are going to have a go at build one or two little standalone projects, which will give you some coding practice, introduce a couple of new concepts; we can hopefully and hopefully give you some fun at the same time.</p>
 
-<h2>A shopping list</h2>
+<h2 id="51">A shopping list</h2>
 
 <p>The first example we'll look at is a simple little program that allows you to enter items into an input field and then submit them to add them to a list that appears below. The final working example can be seen at <a href="javascript-examples/shopping-list.html">My shopping list</a> — but no peeking at the code until you've tried it yourself!</p>
 
@@ -140,7 +140,7 @@ submit.onclick = addItem;</code></pre>
 
 <p>You'll notice in my final code that I used an anonymous function for this second part, and just attached it directly to the <code>onclick</code> handler. But you could do it a different way if you like.</p>
 
-<h2>A text search app</h2>
+<h2 id="52">A text search app</h2>
 
 <p>Our second example is slightly more complex, and highlights one of the main uses of JavaScript: processing text. In this demo we will create an app that will take a big chunk of text you feed into it and a search term, search through it, and then highlight where the search term appears in the chunk of text.</p>
 
@@ -297,6 +297,5 @@ clearButton.onclick = clearFields;</code></pre>
    
   </main>
   </body>
-
   <script src="prism/prism.js"></script>
 </html>
