--- a/beginners-programming/index.html
+++ b/beginners-programming/index.html
@@ -21,17 +21,49 @@
   <main>
 
     <hgroup>
-      <h1>Beginners programming TopicKit</h1>
+      <h1>Beginners programming ContentKit</h1>
       <h2>Beginning your journey towards learning to code</h2>
     </hgroup>
 
-<p>Hello and welcome to the "Beginners programming" TopicKit. This kit contains resources that you can use the learn and teach general programming principles and the JavaScript language. The material is divided into three sections:</p>
+<p>Hello and welcome to the "Beginners programming" ContentKit. This kit contains resources that you can use the learn and teach general programming principles and the JavaScript language. The material is divided into three sections:</p>
 
 <ol>
-  <li><a href="guides/index.html">Guides</a>: This section contains a full 8-part tutorial series tat you can work through on your own, or use for collaborative learning or teaching a class. This section also contains a number of demos to demonstrate the topics in action.</li>
+  <li><a href="guides/">Guides</a>: This section contains a full 8-part tutorial series that you can work through on your own, or use for collaborative learning or teaching a class. This section also contains a number of demos to demonstrate the topics in action.</li>
   <li><a href="slides/">Slides</a>: This section contains a slide deck that can be used to give a presentation on the main topic of the TopicKit.</li>
   <li><a href="slide-script/">Slide script</a>: This section contains notes to go along with the slide deck. We have kept these separate from the slides so they are easier to translate.</li>
 </ol>
+
+<h2>How to use this ContentKit</h2>
+
+<p>If you are a self-learning student, you can just open up the <a href="guides/">Guides</a> and start learning. If you get stuck, try talking to other students, or follow some of the advice in the <em>Getting help</em> section below.</p>
+
+<p>If you are a teacher, then a general practice for using the Content Kit is as follows:</p>
+
+<ol>
+  <li>Make sure all the students have got a computer available, with a text editor and modern web browser available on them.</li>
+  <li>Internet access is very useful, but not essential for this course. You should make sure that you have the complete set of course material available offline, in case Internet access is not availalble. Put it on a USB stick or CD perhaps, so it can be easily shared around all the students before the course starts.</li>
+  <li>Get all the students to open up the <a href="guides/">Guides landing page</a> in their browser, ready to get started.</li>
+  <li>You should open up the <a href="guides/">Guides landing page</a> in your browser too, but in addition have the <a href="slides/">Slides</a> open in another tab, and also have the <a href="slide-script/">Slide script</a> available to refer to in case you need guidance on presenting the slides (ideally have these open on another monitor or computer, or print them out and keep a set beside your computer.)</li>
+  <li>Each lesson should take between 1 hour and 1 hour 30 minutes to go through. Take it slowly and give your students regular breaks if going thorugh multiple lessons in one session.</li> 
+  <li>As well as testing the students with the exercises that you'll find in the <a href="guides/">Guides</a>, you should feel free to add your own test questions.</li>
+  <li>To make finding where you are up and allowing your students to follow along easier, we've included numbers on the left hand side of the <a href="guides/">Guides</a> that match up to the slide numbers and slide script numbers. Use these to find where you are in relation to the slides if you are following along and get lost.</li>
+</ol>
+
+<h2>Getting help</h2>
+
+<p>When you get stuck with a programming problem and need somewhere to turn for help, life can be frustrating unless you know where to go. If you don't have a programming genius friend you can call, here are some other suggestions:</p>
+
+<ul>
+  <li>Search wisely. Professional developers spend a large amount of time searching the Web for answers — you aren't expected to memorise everything! If you don't know how to write a piece of code or you're getting an error, go to your favourite search engine and try
+    <ul>
+      <li>Searching for the exact error message you are getting, perhaps along with the API, method, property, etc. you are using.</li>
+      <li>Searching for the language you are working in, plus a brief description of what you are trying to do. For example "JavaScript splitting string of text"</li>
+      <li>Searching for the name of the library you are trying to use, along with a description of the kind of resource you are looking for, e.g. "Ember.js beginners tutorial"</li>
+    </ul>
+  </li> 
+  <li>Ask a question on a forum and see if you can get an answer for it. <a href="http://stackoverflow.com/">Stack Overflow</a> is currently the most popular forum type site for programmers. Ask your question on there. Better still, search on there first, as your question may have already been answered.</li>
+  <li>Find a local meetup to attend, so you can get to know other people locally who are into the same programming you are doing. It is really helpful to get a network of people around you. Again, search online, for things like "JavaScript Manchester", or "Python Colarado".</li>
+</ul>
 
     <h2>Translations</h2>
 
