--- a/beginners-programming/slide-script/index.html
+++ b/beginners-programming/slide-script/index.html
@@ -46,7 +46,7 @@
       <li><strong>Title slide</strong>: Hello and welcome</li>
       <li><strong>Table of contents</strong>: This is what we will cover in this workshop</li>
       <li><strong>Intro</strong></li>
-      <li><strong>Code is just another language</strong>: When we want to talk to humans and give them instructions, we use a human language, like English, Chinese or Urdu. When we want to talk to computers and give them instructions, we use code. JavaScript in particular is code that talks to a web browser</li>
+      <li><strong>Code is just another language</strong>: When we want to talk to humans and give them instructions, we use a human language, like English, Chinese or Urdu. When we want to talk to computers and give them instructions, we use code. JavaScript in particular is code that talks to a web browser.</li>
       <li><strong>JavaScript is interpreted</strong>: By the JavaScript engine inside the web browser. JavaScript, and other languages like HTML and CSS, are interpreted to output web pages that a computer user can use.</li>
       <li><strong>How the Web works</strong>:
         <ul>
